# Data-Structures-and-Algorithms

./: README.md
python/: pyproject.toml
python/src/interface/: Sequence.py  Set.py
python/src/sequence/: Array_seq.py  StaticArray.py
python/src/tests/: test_array_seq.py  test_static_array.py
