[tool.poetry]
name = "data_structure"
version = "0.1.0"
description = ""
authors = ["zwjjoy <zwjjoy@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
